--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,11 @@ on:
   push:
     branches: [ main ]
 
+env:
+  RAILS_ENV: test
+  DATABASE_URL: postgres://postgres:postgres@localhost:5432
+  # REDIS_URL: redis://localhost:6379/0
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -35,9 +40,8 @@ jobs:
           ruby-version: .ruby-version
           bundler-cache: true
 
+      - name: Prepare database
+        run: bin/rails db:test:prepare test test:system
+
       - name: Run tests
-        env:
-          RAILS_ENV: test
-          DATABASE_URL: postgres://postgres:postgres@localhost:5432
-          # REDIS_URL: redis://localhost:6379/0
         run: bundle exec rspec
